--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,1 +1,35 @@
-<p>product-list works!</p>
+<h2>{{title}}</h2>
+
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Price</th>
+        <th scope="col">On Stock</th>
+        <th scope="col">Category</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+      @for (item of products; track $index) {
+        <tr>
+          <th scope="row">{{item.id}}</th>
+          <td>{{item.name}}</td>
+          <td>{{item.description}}</td>
+          <td>{{item.price}}</td>
+          <td>{{item.onStock}}</td>
+          <td>{{item.category?.name}}</td>
+        </tr>
+      } @empty {
+        <tr>
+          <td colspan="4">
+            <div class="d-flex justify-content-center align-items-center w-100">
+              <p class="mb-0">There are not products</p>
+            </div>
+          </td>
+        </tr>
+      }
+    </tbody>
+  </table>
